Added some bootstrap grid structure. Added images for rock, paper, and scissors. Added layout pdf.

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- Linking Firebase Core -->
-    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
 
     <!-- Linking Firevase Database -->
-    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-database.js"></script>
 
     <!-- Linking moment.js -->
     <script src="assets/javascript/moment.js"></script>
@@ -37,6 +37,25 @@
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
-    
+    <div class="container border border-dark">
+        <div class="row">
+            <div class="col-9">
+                <div></div>
+            </div>
+            <div class="col-3">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert-secondary">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div>
 </body>
 </html>
