Added Cookies.js CDN link for handling cookies with jQuery. Changed code to create, set, get cookies with Cookies.js functionality in game.js

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- Linking moment.js -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
+    <!-- Linking Cookie.js -->
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
+
     <!-- Linking Javascript -->
     <script src="assets/javascript/game.js"></script>
 </head>
