Updated chat functionality to work with new user authentication in app.js

--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                             </div>
                             <form>
                                 <div class="form-group m-0">
-                                    <input type="message" class="form-control" id="message" maxlength="200" placeholder="Enter message">
+                                    <input type="text" class="form-control" autocomplete="off" autofill="off" id="message-box" placeholder="Enter message">
+                                    <button id="message" class="btn btn-primary">Send</button>
                                 </div>
                             </form>
                         </div>
