--- a/index.html
+++ b/index.html
@@ -135,7 +135,32 @@
 
 
         <div class="row">
-            <div class="col-8">
+
+            <!-- Game Lobby Card -->
+            <div class="col-2">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card" id="lobby-card">
+                            <div class="card-header">
+                                Open Games
+                            </div>
+                            <div class="card-body">
+                                <button class="btn btn-primary mx-auto" id="create-game">Create Game</button>
+                                <hr>
+                                <div id="lobby"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 float-left">
+                        <button class="btn btn-primary mt-3" id="sign-out">Sign Out</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Game Card -->
+            <div class="col-6">
                 <div class="row">
                     <div class="col-6">
                         <div class="card">
@@ -179,12 +204,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 float-left">
-                        <button class="btn btn-primary mt-3" id="sign-out">Sign Out</button>
-                    </div>
-                </div>
             </div>
+
+            <!-- Chat Card -->
             <div class="col-4">
                 <div class="row">
                     <div class="col-12">
