--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <!-- Linking Font Awesome -->
-    <script src="https://kit.fontawesome.com/ee87894be9.js"></script>
-
     <!-- Linking Stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -37,14 +34,12 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/4.2.0/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/4.2.0/firebaseui.css" />
 
-    <!-- Linking moment.js -->
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
-    <!-- Linking Cookie.js -->
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
-
     <!-- Linking Javascript -->
+    <script src="assets/javascript/database.js"></script>
+    <script src="assets/javascript/chat.js"></script>
+    <script src="assets/javascript/account.js"></script>
     <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/main.js"></script>
 </head>
 <body>
     <div class="container bg-secondary rounded mt-3">
