--- a/index.html
+++ b/index.html
@@ -224,6 +224,6 @@
             </div>
         </div>
     </div>
-    <!-- <div class="fixed-bottom">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+    <div class="fixed-bottom text-muted">Icons made by <a class="text-muted" href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a class="text-muted" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </body>
 </html>
