--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
     </div>
     <div class="container border border-secondary p-3 mt-3 rounded">
 
-
-
-
     <!-- ************************  Modal Goes Here  ******************************** -->
-
-
 
     <div class="modal" tabindex="-1" role="dialog" id="user-modal">
         <div class="modal-dialog" role="document">
@@ -119,20 +114,12 @@
         </div>
     </div>
     
-
-
-
     <!-- ************************  Modal Ends Here  ******************************** -->
-
-
-
-
-
 
         <div class="row">
 
             <!-- Game Lobby Card -->
-            <div class="col-2">
+            <div class="col-xs-12 col-md-2 col-lg-2 col-xl-2">
                 <div class="row">
                     <div class="col-12">
                         <div class="card" id="lobby-card">
@@ -155,7 +142,7 @@
             </div>
 
             <!-- Game Card -->
-            <div class="col-6">
+            <div class="col-xs-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="row">
                     <div class="col-6">
                         <div class="card">
@@ -202,7 +189,7 @@
             </div>
 
             <!-- Chat Card -->
-            <div class="col-4">
+            <div class="col-xs-12 col-md-4 col-lg-4 col-xl-4">
                 <div class="row">
                     <div class="col-12">
                         <div class="card" id="chat">
